grammar.js
    source_file: $ => seq(
      any_amount_of($._definition),
      optional("\0")
    ),

    _definition: $ => seq(
      $._statement,
    ),

    import_statement: $ => seq(
      alias(/import/i, $.import),
      field('path', $.string)
    ),

    const_statement: $ => seq(
      alias(/const/i, $.const),
      field('name', $.identifier),
      '=',
      field('value', $._expression)
    ),

    function_start: () => /function/i,

    function_statement: $ => seq(
      seq($.function_start, /\s*/, field("name", $.identifier)),
      $.function_impl
    ),

    sub_start: () => /sub/i,

    sub_statement: $ => seq(
      seq($.sub_start, /\s*/, field("name", $.identifier)),
      $.sub_impl
    ),

    _statement: $ => prec.right(1, choice(
      $.sub_statement,
      $.function_statement,
      $.library_statement,
      $.import_statement,
      $.const_statement,
      $.alias_statement,
      $.type_statement,
      $.constant,
      $.if_statement,
      $.conditional_compl,
      $.while_statement,
      $.for_statement,
      $.try_statement,
      $.class_statement,
      $.interface_statement,
      $.namespace_statement,
      $.enum_statement,
      $._single_line_statement,
      // $.expression_statement,
    )),

    _expression: $ => choice(
      $.new_expression,
      $.ternary_expression,
      $.null_coalescing_expression,
      $.type_cast_expression,
      $.parenthesized_expression,
      $.prefix_exp,
      $.literal,
      $.binary_expression,
      $.unary_expression,
      $.tagged_template_string,
      $.annonymous_sub,
      $.annonymous_function
    ),

    class_statement: $ => seq(
      optional(repeat1(field('annotation', $.annotation))),
      alias(/class/i, $.class_start),
      field('name', $.identifier),
      optional($.class_heritage),
      optional(field('body', $.class_body)),
      $.end_class
    ),

    class_heritage: $ => seq(
      alias(/extends/i, $.extends),
      field('superclass', $.identifier),
      optional($.class_implements)
    ),

    class_implements: $ => seq(
      alias(/implements/i, $.implements),
      commaSep1(field('interface', $.identifier))
    ),

    class_body: $ => repeat1($.class_member),

    class_member: $ => choice(
      $.class_field,
      $.class_method
    ),

    class_field: $ => seq(
      optional(field('annotation', $.annotation)),
      optional($.access_modifier),
      field('name', $.identifier),
      optional(seq('=', field('value', $._expression))),
      optional($.type_specifier)
    ),

    class_method: $ => seq(
      optional(field('annotation', $.annotation)),
      optional($.access_modifier),
      optional(alias(/override/i, $.override)),
      choice(
        $.function_statement,
        $.sub_statement
      )
    ),

    access_modifier: $ => choice(
      alias(/public/i, $.public),
      alias(/private/i, $.private),
      alias(/protected/i, $.protected)
    ),

    assignment_statement: $ => prec(PREC.ASSIGNMENT, seq(
      field('left', $.variable_declarator),
      field('operator', choice('=', '+=', '-=', '*=', '/=', '\\=', '<<=', '>>=')),
      field('right', $._expression)
    )),

    print_statement: $ => seq(
      alias(choice(/print/i, '?'), $.print),
      field('arguments', seq($._expression, repeat(seq(choice(',', ';'), $._expression)))),
    ),

    block: $ => repeat1(
      $._statement
    ),

    parameter_list: $ => seq(
      '(',
      commaSep($.parameter),
      ')'
    ),

    parameter: $ => seq(
      field('name', $.identifier),
      optional(seq('=', $._expression)),
      optional(
        $.type_specifier
      )
    ),

    return_type: $ => $.type_specifier,

    _type_with_array: $ => choice(
      $._type_base,
      $._type_array
    ),

    type_specifier: $ => seq(
      $.as,
      field('type', $._type_with_array)
    ),

    _prefix_exp: ($) =>
      choice(
        $._var,
        $.function_call
      ),

    prefix_exp: ($) => $._prefix_exp,

    function_call: $ => prec.right(1,seq(
      field('function', $.prefix_exp),
      field('arguments', $.parenthesized_expression)
    )),

    variable_declarator: ($) => $._var,

    _var: ($) =>
      prec.right(1, choice(
        $.identifier,
        seq($.prefix_exp, choice('[', '?['), commaSep1($._expression), ']'),
        seq($.prefix_exp, choice('.', '?.'), $.identifier),
        seq($.prefix_exp, '@.', $.identifier),
      )),

    // Expressions
    binary_expression: $ => choice(
      $.logical_expression,
      $.comparison_expression,
      $.arithmetic_expression
    ),

    comparison_expression: $ => prec.left(PREC.COMPARISON, choice(
      seq(field('left', $._expression), field('operator', '='),   field('right', $._expression)),
      seq(field('left', $._expression), field('operator', '<>'),  field('right', $._expression)),
      seq(field('left', $._expression), field('operator', '<'),   field('right', $._expression)),
      seq(field('left', $._expression), field('operator', '<='),  field('right', $._expression)),
      seq(field('left', $._expression), field('operator', '>'),   field('right', $._expression)),
      seq(field('left', $._expression), field('operator', '>='),  field('right', $._expression)),
    )),

    arithmetic_expression: $ => choice(
      $.additive_expression,
      $.multiplicative_expression
    ),

    additive_expression: $ => prec.left(PREC.ADDITIVE, choice(
      seq(field('left', $._expression), field('operator', '+'), field('right', $._expression)),
      seq(field('left', $._expression), field('operator', '-'), field('right', $._expression))
    )),

    parenthesized_expression: $ => seq(
      '(',
      commaSep($._expression),
      ')'
    ),

    literal: $ => choice(
      $.invalid,
      $.boolean,
      $.number,
      $.string,
      $.template_string,
      $.regex_literal,
      $.source_literal,
      $.array,
      $.assoc_array
    ),

    boolean: $ => choice(
      /true/i,
      /false/i
    ),

    number: $ => /-?\d+(\.\d+)?/,

    string: $ => seq(
      '"',
      repeat(choice(
        alias(/[^"]+/, $.string_contents),
        alias(seq('""'), $.escaped_quote)
      )),
      '"'
    ),

    string_contents: $ => /[^"]*/,

    // Template strings (backtick strings with ${} interpolation)
    alias_statement: $ => seq(
      alias(/alias/i, $.alias),
      field('name', $.identifier),
      '=',
      field('type', $._type_with_array)
    ),

    // Type statement: type MyUnion = string or integer
    array: $ => seq(
      '[',
      optional(commaSep($._expression)),
      ']'
    ),

    assoc_array: $ => seq(
      '{',
        optional(commaSepNewLine($.assoc_array_element)),
      '}'
    ),

    assoc_array_element: $ => seq(
      field('key', choice(
        $.identifier,
        $.string
      )),
      ':',
      field('value', $._expression)
    ),

    as: $ => /as/i,
    end_sub: $ => /end\s+sub/i,
    end_function: $ => /end\s+function/i,
    end_class: $ => /end\s+class/i,

    interface_statement: $ => seq(
      alias(/interface/i, $.interface_start),
      field('name', $.identifier),
      optional(field('body', $.interface_body)),
      $.end_interface
    ),

    interface_body: $ => repeat1($.interface_member),

    namespace_statement: $ => seq(
      alias(/namespace/i, $.namespace_start),
      field('name', $.dotted_identifier),
      optional(field('body', $.namespace_body)),
      $.end_namespace
    ),

    dotted_identifier: $ => seq(
      $.identifier,
      repeat(seq('.', $.identifier))
    ),

    namespace_body: $ => repeat1($._statement),

    enum_statement: $ => seq(
      alias(/enum/i, $.enum_start),
      field('name', $.identifier),
      optional(field('body', $.enum_body)),
      $.end_enum
    ),

    enum_body: $ => repeat1($.enum_member),

    enum_member: $ => seq(
      field('name', $.identifier),
      optional(seq('=', field('value', $._expression)))
    ),

    interface_member: $ => $.interface_method_signature,

    interface_method_signature: $ => seq(
      choice(
        seq($.sub_start, field('name', $.identifier), $.parameter_list),
        seq($.function_start, field('name', $.identifier), $.parameter_list, optional($.return_type))
      )
    ),

    end_interface: $ => /end\s+interface/i,
    end_namespace: $ => /end\s+namespace/i,
    end_enum: $ => /end\s+enum/i,
    end_statement: $ => choice(
      $.end_sub,
      $.end_function,
      $.end_if,
      $.conditional_compl_end_if,
      $.end_for,
      $.end_while,
      $.end_try,
      $.end_class,
      $.end_namespace,
      $.end_enum
    ),

    annotation: $ => seq(
      '@',
      field('name', $.identifier),
      optional($.annotation_arguments)
    ),

    annotation_arguments: $ => seq(
      '(',
      commaSep(choice(
        field('positional', $._expression),
        field('named', $.annotation_named_argument)
      )),
      ')'
    ),

    identifier: $ => choice($.m, $.regular_identifier),
    m: $ => /m/i,
    regular_identifier: $ => token(prec(0, /[a-zA-Z_][a-zA-Z0-9_]*/)),
  }
});

function commaSep(rule) {
  return optional(
    seq(
      rule,
      repeat(
        seq(
          ',',
          rule
        )
      )
    )
  )
}

function commaSepNewLine(rule) {
  return optional(
    seq(
      rule,
      repeat(
        seq(
          optional(','),
          rule
        )
      )
    )
  )
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

function any_amount_of() {
  return repeat(seq(...arguments));
}
